--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 #media-player {
     width: 100%;
-    /* height: fit-content; */
     position: relative;
     top: 3rem;
 }
@@ -24,16 +23,30 @@ body {
 }
 
 .controls {
+    border-radius: 25px 25px 0 0;
     position: relative;
-    top: -5rem;
+    top: -5.6rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     height: 5rem;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.685);
+    background-color: rgba(0, 0, 0, 0.705);
+    padding: 0.6rem 0;
 }
+
+.controls button {
+    background-color: transparent;
+    border: 1px rgba(66, 66, 66, 0.904);
+    border-radius: 50px;
+}
+
+.controls img {
+    height: 28px;
+    filter: invert();
+}
+
 .btns {
     width: 85%;
     height: 3rem;
@@ -44,8 +57,9 @@ body {
 
 .lfBtn {
     display: flex;
+    align-items: center;
     gap: 5px;
-    width: 25rem;
+    width: 30rem;
 }
 
 #mute {
@@ -85,4 +99,31 @@ body {
 #fullscreen {
     width: 40px;
     margin-left: auto;
+}
+
+#progress {
+    -webkit-appearance: none;
+    height: 5px;
+    background: #dfdfdfc5;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    border-radius: 25px;
+}
+
+#progress:hover {
+    opacity: 1;
+}
+
+#progress::-webkit-slider-thumb {
+    width: 20px;
+    background: #0099ff;
+    cursor: pointer;
+}
+
+#progress::-moz-range-thumb {
+    width: 20px;
+    background: #0099ff;
+    cursor: pointer;
 }
